# task_management_system

./: README.md  pyproject.toml
.github/workflows/: build_test.yml  info.yml
core/: admin.py  models.py  paginations.py  permissions.py  serializers.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_task_is_completed.py
mysite/: settings.py  urls.py
